# Simulation

./: .env.example  .gitignore  README.md  docker-compose.ci.yml  docker-compose.dev.yml  env.example
.github/workflow/: ci.yml
config/: px4_params.yaml  ros_gz_bridge.yaml  simulation_launch.py
docker/: Dockerfile  Dockerfile.ci  Dockerfile.dev  entrypoint.sh
docs/: ci-integration.md  setup-linux.md  setup-macos.md  setup-windows.md  troubleshooting.md
models/hexacopter/: model.config  model.sdf
models/hexacopter_sensors/: model.config  model.sdf
models/x500_depth/: model.config  model.sdf
ros2_ws/src/drone_bringup/: package.xml
ros2_ws/src/drone_bringup/launch/: simulation.launch.py
scripts/: run_simulation.sh  start_ci.sh  start_dev.sh
tests/: test_sensors.py
worlds/: outdoor_field.sdf  outdoor_obstacles.sdf
